--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 EvergreenMC -: Please Wait your being redirected.
-<meta http-equiv="Refresh" content="0; url='store.evergreenmc.ml'" />
+<meta http-equiv="Refresh" content="0; url='https://store.evergreenmc.ml'" />
